<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/myPokemon"
        android:icon="@drawable/ic_pokeball"
        android:title="@string/Mes_pokemon"/>

    <item
        android:id="@+id/pokedex"
        android:icon="@drawable/ic_pokedex"
        android:title="@string/pokedex"/>

    <item
        android:id="@+id/amis"
        android:icon="@drawable/com_facebook_profile_picture_blank_portrait"
        android:title="@string/mes_amis" />

    <item
        android:id="@+id/liste"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/ma_liste" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/parametre"/>

</menu>